--- a/main.css
+++ b/main.css
@@ -19,10 +19,14 @@
 
     header li {
         display: inline;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        margin-left: 16px;
     }
 
     header li a {
         color:#e2dede;
+        text-decoration: none;
     }
     
     .container {
@@ -38,7 +42,8 @@
     }
 
     .articles article img {
-        height: 180px;
+        /*height: 180px; */
+        width: 100%;
     }
 
     .articles article {
@@ -64,4 +69,40 @@
         color: white;
         padding: 8px;
         display: inline-block;
+        text-decoration: none;
+        font-weight: bold;
+        margin-top: 8px;
+    }
+
+    .articles article a:hover {
+        text-decoration: underline;
+    }
+
+    .articles article p, 
+    .articles article a {
+        font-family: Arial, Helvetica, sans-serif
+    }
+
+    .articles article h3 {
+        font-size: 24px;
+    }
+
+    section h2 {
+        font-size: 38px;
+    }
+
+    #sport {
+        background-color: rgba(0, 255, 0, 0.1);
+    }
+
+    #sport .articles article a {
+        background-color: #009432; 
+    }
+
+    #economy {
+        background-color: #e8e7c6;
+    }
+
+    #economy .articles article a {
+        background-color: #ff9f1a;
     }
